# lab-equip-manager-with-signoz-poc

./: .env.example  .gitignore  AGENTS.md  README.md  justfile
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20260714000001_init.sql  20260714000002_reservation_exclusion_constraint.sql
backend/src/: config.rs  lib.rs  main.rs  models.rs  state.rs
backend/src/api/: auth.rs  cookies.rs  equipment.rs  extractors.rs  mod.rs  otel_middleware.rs  reservations.rs  router.rs
backend/src/auth/: mod.rs  password.rs  rate_limit.rs  session.rs  token.rs
backend/src/domain/: mod.rs  reservation.rs
backend/src/infra/: db.rs  mod.rs  storage.rs
backend/src/telemetry/: mod.rs
backend/tests/: reservation_conflict.rs
doc/: README.md  architecture.md  auth.md  conventions.md  development.md  domain.md  observability.md
frontend/: AGENTS.md  Caddyfile  Dockerfile  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  auth.tsx  main.tsx  otel.ts  styles.css
frontend/src/api/: client.test.ts  client.ts
frontend/src/pages/: EquipmentDetailPage.tsx  EquipmentPage.tsx  HomePage.tsx  ReservationsPage.tsx
infra/: compose.yaml
infra/caddy/: Caddyfile
infra/garage/: garage.toml
infra/otel/: otel-collector-config.yaml
infra/postgres/: init.sql
infra/signoz/: compose.dashboard-v2.yaml  provision-dashboard.sh
infra/signoz/dashboards/: equipment-reservation-observability.json
scripts/: podman-env.zsh
